--- a/src/app/roles/styles.module.css
+++ b/src/app/roles/styles.module.css
@@ -18,7 +18,7 @@
 
 .amount {
     font-size: 20px;
-    margin-bottom: 20px;
+    margin: 30px 0 20px 0;
     font-weight: 600;
     color: var(--grey-1);
 }
